Agregamos el Css y el Calendario de los partidos

--- a/calendario.html
+++ b/calendario.html
@@ -1,17 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CalendarioWPV.css" />
 
 
 
 </head>
+
 <body>
+    <header>
+        <h1>Calendario de Partidos - WPV</h1>
+    </header>
 
+    <main>
 
-    
-    
+        <!-- Fecha 1 -->
+        <h2 class="fecha">05/12/2025</h2>
+        <div class="Calendario fehca 05-12-2025">
+            <!-- Masculino -->
+            <div class="Partidos">
+                <h3 class="rama">Masculino</h3>
+                <table class="calendario">
+                    <thead>
+                        <tr>
+                            <th>Hora</th>
+                            <th>Equipo Local</th>
+                            <th>Equipo Visitante</th>
+                            <th>Cancha</th>
+                            <th>Resultado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>18:00</td>
+                            <td>Argentina</td>
+                            <td>Brasil</td>
+                            <td>Estadio Arena VNL</td>
+                            <td>3-1</td>
+                        </tr>
+                        <tr>
+                            <td>20:00</td>
+                            <td>Italia</td>
+                            <td>Polonia</td>
+                            <td>Palacio de los Deportes</td>
+                            <td>2-3</td>
+                        </tr>
+                        <tr>
+                            <td>22:00</td>
+                            <td>Serbia</td>
+                            <td>Francia</td>
+                            <td>Estadio Nacional</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Femenino -->
+            <div class="Partidos">
+                <h3 class="rama">Femenino</h3>
+                <table class="calendario">
+                    <thead>
+                        <tr>
+                            <th>Hora</th>
+                            <th>Equipo Local</th>
+                            <th>Equipo Visitante</th>
+                            <th>Cancha</th>
+                            <th>Resultado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>16:00</td>
+                            <td>Estados Unidos</td>
+                            <td>Canadá</td>
+                            <td>Estadio Nacional</td>
+                            <td>3-0</td>
+                        </tr>
+                        <tr>
+                            <td>18:00</td>
+                            <td>China</td>
+                            <td>Japón</td>
+                            <td>Palacio de los Deportes</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>20:00</td>
+                            <td>Brasil</td>
+                            <td>Italia</td>
+                            <td>Estadio Arena VNL</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Fecha 2 -->
+        <h2 class="fecha">10/12/2025</h2>
+        <div class="Calendario fehca 10-12-2025">
+            <div class="Partidos">
+                <h3 class="rama">Masculino</h3>
+                <table class="calendario">
+                    <tbody>
+                        <tr>
+                            <td>17:00</td>
+                            <td>Japón</td>
+                            <td>Polonia</td>
+                            <td>Palacio de los Deportes</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>19:00</td>
+                            <td>China</td>
+                            <td>Serbia</td>
+                            <td>Estadio Nacional</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>21:00</td>
+                            <td>Argentina</td>
+                            <td>Francia</td>
+                            <td>Estadio Arena VNL</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="Partidos">
+                <h3 class="rama">Femenino</h3>
+                <table class="calendario">
+                    <tbody>
+                        <tr>
+                            <td>16:00</td>
+                            <td>Francia</td>
+                            <td>Estados Unidos</td>
+                            <td>Palacio de los Deportes</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>18:00</td>
+                            <td>Brasil</td>
+                            <td>Argentina</td>
+                            <td>Estadio Arena VNL</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>20:00</td>
+                            <td>China</td>
+                            <td>Italia</td>
+                            <td>Palacio de los Deportes</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Fecha 3 -->
+        <h2 class="fecha">15/12/2025</h2>
+        <div class="Calendario fehca 15-12-2025">
+            <div class="Partidos">
+                <h3 class="rama">Masculino</h3>
+                <table class="calendario">
+                    <tbody>
+                        <tr>
+                            <td>17:00</td>
+                            <td>Argentina</td>
+                            <td>China</td>
+                            <td>Estadio Arena VNL</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>19:00</td>
+                            <td>Polonia</td>
+                            <td>Serbia</td>
+                            <td>Palacio de los Deportes</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>21:00</td>
+                            <td>Brasil</td>
+                            <td>Italia</td>
+                            <td>Estadio Arena VNL</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="Partidos">
+                <h3 class="rama">Femenino</h3>
+                <table class="calendario">
+                    <tbody>
+                        <tr>
+                            <td>16:00</td>
+                            <td>Japón</td>
+                            <td>Brasil</td>
+                            <td>Estadio Nacional</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>18:00</td>
+                            <td>Italia</td>
+                            <td>China</td>
+                            <td>Palacio de los Deportes</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>20:00</td>
+                            <td>Estados Unidos</td>
+                            <td>Francia</td>
+                            <td>Estadio Arena VNL</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </main>
 </body>
 </html>
