--- a/noticias.html
+++ b/noticias.html
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="NoticiasWPV.css" />
 
 
 
 </head>
 <body>
+    <section class="noticias">
+    <h2>Últimas Noticias VNL</h2>
+
+    <!-- Noticia principal -->
+    <article class="noticia principal">
+        <img src="https://via.placeholder.com/800x400" alt="Partido destacado">
+        <div class="contenido">
+            <h3>Argentina vence a Brasil en emocionante duelo de la VNL 2025</h3>
+            <p>Con un marcador de 3-1, Argentina se impone frente a Brasil en el Estadio Arena VNL. Destacó el rendimiento del armador y la efectividad del saque. Este resultado coloca a Argentina como líder provisional del torneo masculino.</p>
+            <a href="#">Leer más →</a>
+        </div>
+    </article>
+
+    <!-- Noticias secundarias -->
+    <div class="noticias-secundarias">
+        <article class="noticia">
+            <img src="https://via.placeholder.com/400x200" alt="Noticia secundaria 1">
+            <div class="contenido">
+                <h3>Brasil y Polonia empatan en un intenso partido</h3>
+                <p>El equipo brasileño mostró un gran nivel, pero Polonia logró empatar y mantiene sus opciones para la final de la VNL masculina.</p>
+                <a href="#">Leer más →</a>
+            </div>
+        </article>
+        <article class="noticia">
+            <img src="https://via.placeholder.com/400x200" alt="Noticia secundaria 2">
+            <div class="contenido">
+                <h3>Estados Unidos lidera la rama femenina</h3>
+                <p>Con victorias consecutivas, Estados Unidos se consolida en la cima de la VNL femenina, mostrando un juego sólido y efectivo.</p>
+                <a href="#">Leer más →</a>
+            </div>
+        </article>
+        <article class="noticia">
+            <img src="https://via.placeholder.com/400x200" alt="Noticia secundaria 3">
+            <div class="contenido">
+                <h3>Italia sorprende a Francia en la jornada femenina</h3>
+                <p>Italia logra un resultado inesperado ante Francia, demostrando el crecimiento de su plantilla femenina y complicando la tabla del torneo.</p>
+                <a href="#">Leer más →</a>
+            </div>
+        </article>
+    </div>
+</section>
+
 
 
     
