Se agrego el Caleandario al programa

--- a/ProyectoVNL.html
+++ b/ProyectoVNL.html
@@ -13,8 +13,8 @@
     <header class="Encabezado WPV">
         <div class="Contendor de logo">
             <div class="logo">
-                <img src="Gemini_Generated_Image_7ie3lr7ie3lr7ie3.png" alt="Logo WPV" class="logo-img">
-                <span class="Logo">WPV</span>
+                <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
+                <span class="Logo"></span>
             </div>
 
             <div class="Centro de la imagen">
