Se arreglo la pagina principal

--- a/ProyectoVNL.html
+++ b/ProyectoVNL.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header class="Encabezado WPV">
+      <header class="Encabezado WPV">
         <div class="Contendor de logo">
             <div class="logo">
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
@@ -49,24 +49,30 @@
             <ul>
                 <li>&#x1F3D0; Nuevos resultados de la jornada más reciente</li>
                 <li>&#x1F3D0; Estadísticas actualizadas de jugadores y equipos</li>
-                <li>&#x1F3D0; Noticas exclusivas</li>
+                <li>&#x1F3D0; Noticias exclusivas</li>
                 <li>&#x1F3D0; Calendario y Clasificación actualizados</li>
             </ul>
         </section>
     </main>
 
+    <!-- Portada Horizontal -->
     <section class="Portada">
-        <div class="Portada WPV">
-            <span class="Noticias"> WPV 2025</span>
-            <h1>Sitio de Noticias WPV</h1>
-            <p class="Dia">2025</p>
-        </div>
-        <div class="Imagen de la portada">
-            <img src="https://images.volleyballworld.com/image/private/t_editorial_landscape_12_desktop/v1707817519/fivb-prd/jtplwaxqk2yds81fvbqm.jpg"
-                alt="Imagen de WPV">
+        <div class="Portada WPV Horizontal">
+            <div class="ImagenPortada">
+                <img src="https://images.volleyballworld.com/image/private/t_editorial_landscape_12_desktop/v1707817519/fivb-prd/jtplwaxqk2yds81fvbqm.jpg"
+                     alt="Imagen de WPV">
+            </div>
+            <div class="TextoPortada">
+                <span class="Noticias">WPV 2025</span>
+                <h1>Sitio de Noticias WPV</h1>
+                <p class="Dia">2025</p>
+                <p>Bienvenidos a la WPV 2025, donde podrás seguir todas las noticias, resultados y análisis del torneo de voleibol más emocionante del mundo.</p>
+                <a href="noticias.html" class="BotonLeerMas">Leer más →</a>
+            </div>
         </div>
     </section>
 
+    <!-- Información Destacada -->
     <section class="Informacion Destacada">
         <div class="Portada Masculina">
             <img src="https://www.lanacion.com.ar/resizer/v2/polonia-arraso-en-la-etapa-final-de-la-vnl-y-gano-TXNMC2EPAFE5FEZORVWUC35ZSI.jpg?auth=521e946f9397a9a341fa0d8d9b6ce736559669350563153c8f683a118143e575&width=420&height=280&quality=70&smart=true"
