Se agrego las Estaditas al proyecto

--- a/calendario.html
+++ b/calendario.html
@@ -4,23 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calendario WPV</title>
     <link rel="stylesheet" href="CalendarioWPV.css" />
-
-
-
 </head>
 
 <body>
-    <header>
-        <h1>Calendario de Partidos - WPV</h1>
+
+    <!-- ===========================
+              HEADER ESTILO VNL
+         =========================== -->
+    <header class="Encabezado WPV">
+        <div class="Contenedor-de-logo">
+
+            <!-- Logo izquierdo -->
+            <div class="logo">
+                <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
+            </div>
+
+            <!-- Logo central -->
+            <div class="Centro-de-la-imagen">
+                <img src="https://images.volleyballworld.com/image/upload/f_auto/assets/vbw-logos/vbw-video-message.png"
+                     alt="Logo Central">
+            </div>
+
+            <!-- Navegación -->
+            <nav class="links">
+                <a href="calendario.html" class="active-link">Calendario</a>
+                <a href="clasificacion.html">Clasificación</a>
+                <a href="noticias.html">Noticias</a>
+                <a href="equipos.html">Equipos</a>
+                <a href="estadisticas.html">Estadísticas</a>
+            </nav>
+
+        </div>
     </header>
+
+    <!-- ===========================
+             CONTENIDO PRINCIPAL
+         =========================== -->
 
     <main>
 
         <!-- Fecha 1 -->
         <h2 class="fecha">05/12/2025</h2>
         <div class="Calendario fehca 05-12-2025">
+
             <!-- Masculino -->
             <div class="Partidos">
                 <h3 class="rama">Masculino</h3>
@@ -98,11 +126,13 @@
                     </tbody>
                 </table>
             </div>
+
         </div>
 
         <!-- Fecha 2 -->
         <h2 class="fecha">10/12/2025</h2>
         <div class="Calendario fehca 10-12-2025">
+
             <div class="Partidos">
                 <h3 class="rama">Masculino</h3>
                 <table class="calendario">
@@ -131,6 +161,7 @@
                     </tbody>
                 </table>
             </div>
+
             <div class="Partidos">
                 <h3 class="rama">Femenino</h3>
                 <table class="calendario">
@@ -159,11 +190,13 @@
                     </tbody>
                 </table>
             </div>
+
         </div>
 
         <!-- Fecha 3 -->
         <h2 class="fecha">15/12/2025</h2>
         <div class="Calendario fehca 15-12-2025">
+
             <div class="Partidos">
                 <h3 class="rama">Masculino</h3>
                 <table class="calendario">
@@ -192,6 +225,7 @@
                     </tbody>
                 </table>
             </div>
+
             <div class="Partidos">
                 <h3 class="rama">Femenino</h3>
                 <table class="calendario">
@@ -220,8 +254,10 @@
                     </tbody>
                 </table>
             </div>
+
         </div>
 
     </main>
+
 </body>
 </html>
