Creacion del JVs en Calendario, Noticias y Clasificacion

--- a/noticias.html
+++ b/noticias.html
@@ -10,7 +10,6 @@
 
 <body>
 
-
     <header class="Encabezado WPV">
         <div class="Contenedor-de-logo">
 
@@ -18,12 +17,10 @@
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
 
-
             <div class="Centro-de-la-imagen">
                 <img src="https://images.volleyballworld.com/image/upload/f_auto/assets/vbw-logos/vbw-video-message.png"
                     alt="Logo Central">
             </div>
-
 
             <nav class="links">
                 <a href="calendario.html">Calendario</a>
@@ -35,6 +32,7 @@
 
         </div>
     </header>
+
     <section class="noticiasWPV">
         <h2>Últimas Noticias WPV</h2>
 
@@ -45,7 +43,7 @@
             <div class="contenido">
                 <h3>Argentina vence a Brasil en emocionante duelo de la VNL 2025</h3>
                 <p>Con un marcador de 3-1, Argentina se impone frente a Brasil en el Estadio Arena VNL.</p>
-                <a href="#">Leer más →</a>
+                <a href="#" class="leer-mas">Leer más →</a>
             </div>
         </article>
 
@@ -58,7 +56,7 @@
                 <div class="contenido">
                     <h3>Brasil y Polonia empatan en un intenso partido</h3>
                     <p>El equipo brasileño mostró un gran nivel, pero Polonia logró empatar.</p>
-                    <a href="#">Leer más →</a>
+                    <a href="#" class="leer-mas">Leer más →</a>
                 </div>
             </article>
 
@@ -67,7 +65,7 @@
                 <div class="contenido">
                     <h3>Estados Unidos lidera la rama femenina</h3>
                     <p>Con victorias consecutivas, Estados Unidos se consolida en la cima.</p>
-                    <a href="#">Leer más →</a>
+                    <a href="#" class="leer-mas">Leer más →</a>
                 </div>
             </article>
 
@@ -76,7 +74,7 @@
                 <div class="contenido">
                     <h3>Italia sorprende a Francia en la jornada femenina</h3>
                     <p>Italia demuestra crecimiento y complica la tabla general.</p>
-                    <a href="#">Leer más →</a>
+                    <a href="#" class="leer-mas">Leer más →</a>
                 </div>
             </article>
 
@@ -85,17 +83,16 @@
                 <div class="contenido">
                     <h3>Japón domina a China en duelo masculino</h3>
                     <p>Gran actuación de Japón que se lleva la victoria.</p>
-                    <a href="#">Leer más →</a>
+                    <a href="#" class="leer-mas">Leer más →</a>
                 </div>
             </article>
 
             <article class="noticia">
-                <img src="https://deportv.gob.ar/thumbs/advf/imagenes/2025/06/686291af9d54c_450.webp"
-                    alt="Noticia secundaria 5">
+                <img src="https://deportv.gob.ar/thumbs/advf/imagenes/2025/06/686291af9d54c_450.webp" alt="Noticia secundaria 5">
                 <div class="contenido">
                     <h3>Argentina se consolida en la tabla Masculina</h3>
                     <p>Argentina mantiene su posición de liderazgo.</p>
-                    <a href="#">Leer más →</a>
+                    <a href="#" class="leer-mas">Leer más →</a>
                 </div>
             </article>
 
@@ -105,12 +102,16 @@
                 <div class="contenido">
                     <h3>Polonia sorprende a Serbia</h3>
                     <p>Un partido intenso que mantuvo a todos al borde del asiento.</p>
-                    <a href="#">Leer más →</a>
+                    <a href="#" class="leer-mas">Leer más →</a>
                 </div>
             </article>
 
         </div>
     </section>
 
+    <!-- JavaScript -->
+    <script src="NoticiasWPV.js"></script>
+
 </body>
+
 </html>
