--- a/calendario.html
+++ b/calendario.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendario WPV</title>
+    <title>Calendario WPV 2025</title>
     <link rel="stylesheet" href="CalendarioWPV.css" />
 </head>
 
 <body>
     <header class="Encabezado WPV">
         <div class="Contenedor-de-logo">
-
             <div class="logo">
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
@@ -19,7 +18,6 @@
                 <img src="https://images.volleyballworld.com/image/upload/f_auto/assets/vbw-logos/vbw-video-message.png"
                      alt="Logo Central">
             </div>
-
             <nav class="links">
                 <a href="calendario.html" class="active-link">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
@@ -27,20 +25,20 @@
                 <a href="equipos.html">Equipos</a>
                 <a href="estadisticas.html">Estadísticas</a>
             </nav>
-
         </div>
     </header>
 
-
-
     <main>
+        <div class="BotonesCalendario">
+            <button id="btnMasculino" class="btn active" onclick="mostrarPartidos('masculino')">Masculino</button>
+            <button id="btnFemenino" class="btn" onclick="mostrarPartidos('femenino')">Femenino</button>
+        </div>
 
-        <!-- Fecha 1 -->
+        <!-- FECHA 05/12/2025 -->
         <h2 class="fecha">05/12/2025</h2>
-        <div class="Calendario fehca 05-12-2025">
-
+        <div class="Calendario">
             <!-- Masculino -->
-            <div class="Partidos">
+            <div class="Partidos masculino">
                 <h3 class="rama">Masculino</h3>
                 <table class="calendario">
                     <thead>
@@ -58,14 +56,14 @@
                             <td>Argentina</td>
                             <td>Brasil</td>
                             <td>Estadio Arena VNL</td>
-                            <td>3-1</td>
+                            <td>-</td>
                         </tr>
                         <tr>
                             <td>20:00</td>
                             <td>Italia</td>
                             <td>Polonia</td>
                             <td>Palacio de los Deportes</td>
-                            <td>2-3</td>
+                            <td>-</td>
                         </tr>
                         <tr>
                             <td>22:00</td>
@@ -79,7 +77,7 @@
             </div>
 
             <!-- Femenino -->
-            <div class="Partidos">
+            <div class="Partidos femenino">
                 <h3 class="rama">Femenino</h3>
                 <table class="calendario">
                     <thead>
@@ -97,7 +95,7 @@
                             <td>Estados Unidos</td>
                             <td>Canadá</td>
                             <td>Estadio Nacional</td>
-                            <td>3-0</td>
+                            <td>-</td>
                         </tr>
                         <tr>
                             <td>18:00</td>
@@ -116,14 +114,12 @@
                     </tbody>
                 </table>
             </div>
-
         </div>
 
-        <!-- Fecha 2 -->
+        <!-- FECHA 10/12/2025 -->
         <h2 class="fecha">10/12/2025</h2>
-        <div class="Calendario fehca 10-12-2025">
-
-            <div class="Partidos">
+        <div class="Calendario">
+            <div class="Partidos masculino">
                 <h3 class="rama">Masculino</h3>
                 <table class="calendario">
                     <tbody>
@@ -151,8 +147,7 @@
                     </tbody>
                 </table>
             </div>
-
-            <div class="Partidos">
+            <div class="Partidos femenino">
                 <h3 class="rama">Femenino</h3>
                 <table class="calendario">
                     <tbody>
@@ -180,14 +175,12 @@
                     </tbody>
                 </table>
             </div>
-
         </div>
 
-        <!-- Fecha 3 -->
+        <!-- FECHA 15/12/2025 -->
         <h2 class="fecha">15/12/2025</h2>
-        <div class="Calendario fehca 15-12-2025">
-
-            <div class="Partidos">
+        <div class="Calendario">
+            <div class="Partidos masculino">
                 <h3 class="rama">Masculino</h3>
                 <table class="calendario">
                     <tbody>
@@ -215,8 +208,7 @@
                     </tbody>
                 </table>
             </div>
-
-            <div class="Partidos">
+            <div class="Partidos femenino">
                 <h3 class="rama">Femenino</h3>
                 <table class="calendario">
                     <tbody>
@@ -244,10 +236,10 @@
                     </tbody>
                 </table>
             </div>
-
         </div>
 
     </main>
 
+    <script src="CalendarioWPV.js"></script>
 </body>
 </html>
