Se modifico todo el codigo

--- a/calendario.html
+++ b/calendario.html
@@ -14,14 +14,16 @@
             <div class="logo">
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
-           
-            <nav class="links">
-                <a href="calendario.html" class="active-link">Calendario</a>
+
+            <nav class="links" id="Links">
+                <a href="ProyectoVNL.html">Inicio</a>
+                <a href="calendario.html">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
                 <a href="noticias.html">Noticias</a>
                 <a href="equipos.html">Equipos</a>
                 <a href="estadisticas.html">Estadísticas</a>
             </nav>
+
         </div>
     </header>
 
@@ -239,4 +241,5 @@
 
     <script src="CalendarioWPV.js"></script>
 </body>
+
 </html>
