--- a/clasificacion.html
+++ b/clasificacion.html
@@ -18,9 +18,10 @@
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
 
-            <nav class="links">
+            <nav class="links" id="Links">
+                <a href="ProyectoVNL.html">Inicio</a>
                 <a href="calendario.html">Calendario</a>
-                <a href="clasificacion.html" class="active-link">Clasificación</a>
+                <a href="clasificacion.html">Clasificación</a>
                 <a href="noticias.html">Noticias</a>
                 <a href="equipos.html">Equipos</a>
                 <a href="estadisticas.html">Estadísticas</a>
