--- a/equipos.html
+++ b/equipos.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipos Participantes</title>
     <link rel="stylesheet" href="equiposVNL.css" />
 </head>
+
 <body>
 
 
@@ -16,18 +18,15 @@
             <div class="logo">
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
-
-
-           
-
-
-            <nav class="links">
+            <nav class="links" id="Links">
+                <a href="ProyectoVNL.html">Inicio</a>
                 <a href="calendario.html">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
                 <a href="noticias.html">Noticias</a>
-                <a href="equipos.html" class="active-link">Equipos</a>
+                <a href="equipos.html">Equipos</a>
                 <a href="estadisticas.html">Estadísticas</a>
-            </nav>
+                </nav>
+
 
         </div>
     </header>
@@ -41,7 +40,7 @@
             <div class="equipo">
                 <img src="https://flagcdn.com/ar.svg" alt="Argentina">
                 <p>Argentina</p>
-                
+
             </div>
 
             <div class="equipo">
@@ -133,4 +132,5 @@
     </section>
 
 </body>
+
 </html>
