--- a/noticias.html
+++ b/noticias.html
@@ -17,15 +17,16 @@
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
 
-            
-            <nav class="links">
+
+            <nav class="links" id="Links">
+                <a href="ProyectoVNL.html">Inicio</a>
                 <a href="calendario.html">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
-                <a href="noticias.html" class="active-link">Noticias</a>
+                <a href="noticias.html">Noticias</a>
                 <a href="equipos.html">Equipos</a>
                 <a href="estadisticas.html">Estadísticas</a>
             </nav>
-
+          
         </div>
     </header>
 
