se modifico los

--- a/equipos.html
+++ b/equipos.html
@@ -19,7 +19,7 @@
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
             <nav class="links" id="Links">
-                <a href="ProyectoVNL.html">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="calendario.html">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
                 <a href="noticias.html">Noticias</a>
