--- a/estadisticas.html
+++ b/estadisticas.html
@@ -10,7 +10,6 @@
 
 <body>
 
-    <!-- HEADER ESTILO VNL -->
     <header class="Encabezado WPV">
         <div class="ContenedorDeLogo">
 
@@ -19,7 +18,7 @@
             </div>
 
             <nav class="links" id="Links">
-                <a href="ProyectoVNL.html">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="calendario.html">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
                 <a href="noticias.html">Noticias</a>
