--- a/noticias.html
+++ b/noticias.html
@@ -19,7 +19,7 @@
 
 
             <nav class="links" id="Links">
-                <a href="ProyectoVNL.html">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="calendario.html">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
                 <a href="noticias.html">Noticias</a>
@@ -305,7 +305,6 @@
         </div>
     </section>
 
-    <!-- JavaScript -->
     <script src="NoticiasWPV.js"></script>
 
 </body>
