--- a/clasificacion.html
+++ b/clasificacion.html
@@ -17,9 +17,15 @@
             <div class="logo">
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
+            <!-- Botón Hamburgueza -->
+            <div class="Hamburgueza" id="Hamburgueza">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
 
             <nav class="links" id="Links">
-                <a href="ProyectoVNL.html">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="calendario.html">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
                 <a href="noticias.html">Noticias</a>
@@ -405,6 +411,7 @@
         </section>
     </main>
     <script src="clasificacionWPV.js"></script>
+    <script src="MenuHambuerge.js"></script>
 
 </body>
 
