--- a/equipos.html
+++ b/equipos.html
@@ -18,14 +18,20 @@
             <div class="logo">
                 <img src="Gemini_Generated_Image_5gu1js5gu1js5gu1 (1).png" alt="Logo WPV" class="logo-img">
             </div>
+            <!-- Botón Hamburgueza -->
+            <div class="Hamburgueza" id="Hamburgueza">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <nav class="links" id="Links">
-                <a href="ProyectoVNL.html">Inicio</a>
+                <a href="index.html">Inicio</a>
                 <a href="calendario.html">Calendario</a>
                 <a href="clasificacion.html">Clasificación</a>
                 <a href="noticias.html">Noticias</a>
                 <a href="equipos.html">Equipos</a>
                 <a href="estadisticas.html">Estadísticas</a>
-                </nav>
+            </nav>
 
 
         </div>
@@ -130,6 +136,7 @@
 
         </div>
     </section>
+    <script src="MenuHambuerge.js"></script>
 
 </body>
 
